add all sections

--- a/index.html
+++ b/index.html
@@ -68,6 +68,97 @@
             </button>
         </div>
     </div>
+
+    <div class="product-section row">
+        <h2 class="text-center mt-5 mb-0">Latest Products</h2>
+        <div class="product product-1 col-md-6 col-lg-6 col-sm-12">
+            <img src="./assets/images/kettle.png" alt="kettle" class="prod-img">
+            <br>
+            <h3 class="text-light prod-name">Smart Kettle</h3>
+            <h3 class="text-light prod-name">Rs. 4000</h3>
+        </div>
+        <div class="product product-2 col-md-6 col-lg-6 col-sm-12">
+            <img src="./assets/images/oven.png" alt="oven" class="prod-img">
+            <br>
+            <h3 class="text-light prod-name">Microwave</h3>
+            <h3 class="text-light prod-name">Rs. 9000</h3>
+        </div>
+    </div>
+
+    <div class="testimonial-section row">
+        <h2 class="text-center mt-5 mb-0">Testimonials</h2>
+        <div class="person product-1 col-md-6 col-lg-6 col-sm-12">
+            <img src="./assets/images/FK.jpeg" alt="kettle" class="person-img">
+            <br>
+            <h3 class="text-light prod-name">FK</h3>
+            <p class="text-light review">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                sapiente dolore esse nobis eveniet porro quod quibusdam corporis sit eligendi.</p>
+        </div>
+        <div class="person product-2 col-md-6 col-lg-6 col-sm-12">
+            <img src="./assets/images/GP.jpg" alt="oven" class="person-img">
+            <br>
+            <h3 class="text-light prod-name">GP</h3>
+            <p class="text-light review">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                sapiente dolore esse nobis eveniet porro quod quibusdam corporis sit eligendi.</p>
+        </div>
+    </div>
+
+    <div class="about-section row">
+        <div class="about col-md-6 col-lg-6 col-sm-12 mt-5">
+            <h2 class="team-passage mt-5"><b>Message</b></h2>
+            <p class="text-light message">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus illum accusantium dolore molestiae
+                deleniti sequi. Porro assumenda quae modi culpa, accusantium provident suscipit minus eligendi? Unde
+                alias ex laboriosam cumque eveniet aspernatur quibusdam, iure natus dignissimos nihil, reprehenderit
+                molestias nobis doloribus laudantium totam culpa officia consequuntur perspiciatis accusantium amet
+                ducimus?
+            </p>
+        </div>
+        <div class="product product-2 col-md-6 col-lg-6 col-sm-12 mt-5">
+            <img src="./assets/images/team.jpg" alt="Team Photo" class="team-img mt-5">
+        </div>
+    </div>
+
+    <div class="contact-section row">
+        <h2 class="text-center mt-5 mb-0 text-light">Have Your Say...</h2>
+        <div class="col-md-12 col-lg-12 col-sm-12">
+            <form action="/">
+                <div class="form1">
+                    <input type="text" name="name" class="field" placeholder="Name" id="">
+                    <input type="text" name="Email" class="field" placeholder="Email" id="">
+                </div>
+                <div class="form2">
+                    <input type="text" name="contact" class="field" placeholder="Contact No." id="">
+                    <input type="text" name="subject" class="field" placeholder="Subject" id="">
+                </div>
+                <div class="form3">
+                    <input type="text" name="description" class="field1" placeholder="Description" id="">
+                </div>
+                <div class="form3">
+                    <button type="button" class="btn submit-btn mb-4">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="footer-section row">
+        <div>
+            <p class="copyright">All Rights reserved by @YoursTruly 2023</p>
+            <div class="svgs">
+                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M40 20.0501C40 8.98246 31.04 0 20 0C8.96 0 0 8.98246 0 20.0501C0 29.7544 6.88 37.8346 16 39.6992V26.0652H12V20.0501H16V15.0376C16 11.1679 19.14 8.02005 23 8.02005H28V14.0351H24C22.9 14.0351 22 14.9373 22 16.0401V20.0501H28V26.0652H22V40C32.1 38.9975 40 30.4561 40 20.0501Z"
+                        fill="black" />
+                </svg>
+                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M18.7134 0.335058C19.9296 0.330391 21.1458 0.342615 22.3617 0.371725L22.685 0.383392C23.0584 0.396725 23.4267 0.413392 23.8717 0.433392C25.645 0.516725 26.855 0.796725 27.9167 1.20839C29.0167 1.63173 29.9434 2.20506 30.87 3.13173C31.7173 3.9644 32.3731 4.97164 32.7917 6.08339C33.2034 7.14506 33.4834 8.35672 33.5667 10.1301C33.5867 10.5734 33.6034 10.9434 33.6167 11.3167L33.6267 11.6401C33.6563 12.8554 33.6691 14.0711 33.665 15.2867L33.6667 16.5301V18.7134C33.6708 19.9296 33.658 21.1459 33.6284 22.3617L33.6184 22.6851C33.605 23.0584 33.5884 23.4267 33.5684 23.8717C33.485 25.6451 33.2017 26.8551 32.7917 27.9167C32.3744 29.0297 31.7185 30.0377 30.87 30.8701C30.0366 31.7173 29.0289 32.373 27.9167 32.7917C26.855 33.2034 25.645 33.4834 23.8717 33.5667C23.4267 33.5867 23.0584 33.6034 22.685 33.6167L22.3617 33.6267C21.1458 33.6564 19.9296 33.6691 18.7134 33.6651L17.47 33.6667H15.2884C14.0721 33.6708 12.8559 33.6581 11.64 33.6284L11.3167 33.6184C10.921 33.6041 10.5255 33.5874 10.13 33.5684C8.35669 33.4851 7.14669 33.2017 6.08336 32.7917C4.97117 32.374 3.96376 31.7181 3.13169 30.8701C2.28343 30.0372 1.62707 29.0293 1.20836 27.9167C0.796693 26.8551 0.516692 25.6451 0.433359 23.8717C0.414797 23.4763 0.39813 23.0807 0.383359 22.6851L0.375026 22.3617C0.344299 21.1459 0.330408 19.9296 0.333359 18.7134V15.2867C0.328708 14.0711 0.340931 12.8554 0.370026 11.6401L0.381693 11.3167C0.395026 10.9434 0.411692 10.5734 0.431692 10.1301C0.515026 8.35506 0.795026 7.14673 1.20669 6.08339C1.62565 4.97109 2.2833 3.96413 3.13336 3.13339C3.96485 2.28465 4.97163 1.62768 6.08336 1.20839C7.14669 0.796725 8.35503 0.516725 10.13 0.433392L11.3167 0.383392L11.64 0.375059C12.8553 0.344347 14.071 0.330456 15.2867 0.333392L18.7134 0.335058ZM17 8.66839C15.8959 8.65278 14.7996 8.85677 13.775 9.26851C12.7504 9.68024 11.8178 10.2915 11.0314 11.0668C10.2451 11.8421 9.62069 12.766 9.1945 13.7847C8.76832 14.8034 8.54885 15.8966 8.54885 17.0009C8.54885 18.1052 8.76832 19.1984 9.1945 20.2171C9.62069 21.2358 10.2451 22.1597 11.0314 22.935C11.8178 23.7103 12.7504 24.3215 13.775 24.7333C14.7996 25.145 15.8959 25.349 17 25.3334C19.2102 25.3334 21.3298 24.4554 22.8926 22.8926C24.4554 21.3298 25.3334 19.2102 25.3334 17.0001C25.3334 14.7899 24.4554 12.6703 22.8926 11.1075C21.3298 9.5447 19.2102 8.66839 17 8.66839ZM17 12.0017C17.6642 11.9895 18.3242 12.1097 18.9414 12.3554C19.5585 12.6011 20.1206 12.9673 20.5947 13.4326C21.0687 13.898 21.4453 14.4531 21.7024 15.0656C21.9595 15.6781 22.092 16.3358 22.0921 17C22.0922 17.6643 21.96 18.322 21.7031 18.9346C21.4462 19.5472 21.0698 20.1025 20.5958 20.568C20.1219 21.0335 19.56 21.3998 18.9429 21.6457C18.3258 21.8916 17.6659 22.0121 17.0017 22.0001C15.6756 22.0001 14.4038 21.4733 13.4662 20.5356C12.5285 19.5979 12.0017 18.3261 12.0017 17.0001C12.0017 15.674 12.5285 14.4022 13.4662 13.4645C14.4038 12.5268 15.6756 12.0001 17.0017 12.0001L17 12.0017ZM25.75 6.16839C25.2123 6.18991 24.7038 6.41864 24.331 6.80668C23.9582 7.19471 23.75 7.71195 23.75 8.25006C23.75 8.78817 23.9582 9.30541 24.331 9.69344C24.7038 10.0815 25.2123 10.3102 25.75 10.3317C26.3026 10.3317 26.8325 10.1122 27.2232 9.72153C27.6139 9.33083 27.8334 8.80093 27.8334 8.24839C27.8334 7.69586 27.6139 7.16595 27.2232 6.77525C26.8325 6.38455 26.3026 6.16506 25.75 6.16506V6.16839Z"
+                        fill="black" />
+                </svg>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
